--- a/conf/_static/custom.css
+++ b/conf/_static/custom.css
@@ -7,3 +7,13 @@
 .wy-side-nav-search p.pr a:hover {
   color: #fff;
 }
+.side-by-side {
+  display: inline-block;
+}
+html*.side-by-side {
+  display: inline;
+  zoom: 1;
+}
+.side-by-side > a img {
+  margin-right: 15px;
+}
