--- a/conf/_static/custom.css
+++ b/conf/_static/custom.css
@@ -20,3 +20,17 @@ html*.side-by-side {
 .wy-breadcrumbs a.externalLink:visited {
   color: #2980b9;
 }
+
+/* override table width restrictions */
+@media screen and (min-width: 767px) {
+
+   .wy-table-responsive table td {
+      /* !important prevents the common CSS stylesheets from overriding
+         this as on RTD they are loaded after this stylesheet */
+      white-space: normal !important;
+   }
+
+   .wy-table-responsive {
+      overflow: visible !important;
+   }
+}
