--- a/conf/_static/custom.css
+++ b/conf/_static/custom.css
@@ -29,6 +29,10 @@ html*.side-by-side {
   padding:5px;
 }
 
+div.section ins {
+  background-color: transparent;
+}
+
 /* override table width restrictions */
 @media screen and (min-width: 767px) {
 
