remove invalid char

--- a/conf/_static/css/custom.css
+++ b/conf/_static/css/custom.css
@@ -10,9 +10,9 @@
 .wy-side-nav-search img {
   margin: auto;
   height: 22px;
-￼ width: 103px;
+  width: 103px;
   padding: 0px;
-￼ border-radius: 0%;
+  border-radius: 0%;
 }
 .side-by-side {
   display: inline-block;
